--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -24,4 +24,19 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+} */
+
+
+@font-face {
+  font-family: 'fieldwork';
+  /* src: url('../assets/fonts/Fieldwork/fieldwork-geo-bold.otf'); */
+  src: url('../assets/fonts/Fieldwork/fieldwork-geo-regular.otf');
+  /* font-weight: 700; */
+  font-style: normal;
+}
+
+
+body {
+  font-family: 'fieldwork';
+  background-color: #edf3fe;
 }
